src/objects/copado_envmgr__EnvironmentUser__c.object
<CustomObject>
    <fields>
        <fullName>copado_envmgr__Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Environment Users</relationshipLabel>
        <relationshipName>Credential_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__EnvironmentOrg__c</fullName>
        <label>Environment Org</label>
        <referenceTo>copado_envmgr__EnvironmentOrg__c</referenceTo>
        <relationshipLabel>Environment Users</relationshipLabel>
        <relationshipName>Org_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__EnvironmentPersona__c</fullName>
        <label>Environment Persona</label>
        <referenceTo>copado_envmgr__EnvironmentPersona__c</referenceTo>
        <relationshipLabel>Environment Users</relationshipLabel>
        <relationshipName>Environment_Users</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__IsExpired__c</fullName>
        <formula>copado_envmgr__ExpirationDate__c &lt;= TODAY()</formula>
        <label>Is Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__LastJobExecutionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Job Execution Id</label>
        <referenceTo>copado__JobExecution__c</referenceTo>
        <relationshipLabel>Last Job Executions</relationshipLabel>
        <relationshipName>Last_Job_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>In Use</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Environment User</label>
    <listViews>
        <fullName>copado_envmgr__All</fullName>
        <columns>NAME</columns>
        <columns>copado_envmgr__EnvironmentOrg__c</columns>
        <columns>copado_envmgr__Status__c</columns>
        <columns>copado_envmgr__ExpirationDate__c</columns>
        <columns>copado_envmgr__EnvironmentPersona__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>